# tiny-todos

./: .gitignore  Cargo.toml  README.md
src/: error.rs  extract.rs  fallback_process.rs  handle.rs  lib.rs  logger.rs  main.rs  reader.rs  response.rs  route.rs  state.rs  types.rs
src/extractors/: mod.rs  request_body.rs  request_path.rs
src/middlewares/: authenticator.rs  mod.rs
src/validations/: form_validate.rs  mod.rs
